[package]
name = "hpackage"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/BadMagic100/HollowKnight.Packages"
authors = ["BadMagic"]
description = "Rust parsing and validation rules for Hollow Knight PackageDefs"
license = "MIT"
build = "src/build.rs"
include = ["src/*.rs", "Cargo.toml", "../hpackage.schema.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = "0.17.0"
serde = "1.0.160"
serde_json = "1.0.96"
static-files = "0.2.3"

[build-dependencies]
failure = "0.1.8"
prettyplease = "0.2.4"
schemars = "0.8.12"
static-files = "0.2.3"
typify = "0.0.11"
